--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-plugin-istanbul": "^4.1.5",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-es2015": "^6.24.0",
+    "banner-webpack-plugin": "^0.2.3",
     "bowser": "^1.9.0",
     "combinations": "^0.1.1",
     "coveralls": "^3.0.0",
